# cr-renderer

./: .gitignore  README.md  pyproject.toml
src/cr_renderer/: __init__.py  color_utils.py  fonts.py  image_utils.py  renderer.py  schema.py  text_utils.py
tests/: test_renderer.py
